--- a/helm-chart/templates/hub-configmap.yaml
+++ b/helm-chart/templates/hub-configmap.yaml
@@ -20,5 +20,5 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 data:
-  orc.py: |-
+  extra_config.py: |-
     {{- .Files.Get "files/etc/jupyterhub/extra_config.py" | nindent 4 }}
