--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -18,7 +18,7 @@ binderhub:
       per_repo_quota_higher: 200
       use_registry: true
       image_prefix: gesiscss/orc-example-binder-
-      build_image: jupyter/repo2docker:0.10.0-123.gf79bf04
+      build_image: jupyter/repo2docker:0.10.0-125.g94d492e
       build_node_selector:
         user: worker
 
